plots are now in same order as report

--- a/automated_experiments.ipynb
+++ b/automated_experiments.ipynb
@@ -1426,20 +1426,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "\n",
-      "----- LOWEST RESULTS: 0, HIGHEST: 1 ------\n",
-      "\n",
-      "\n",
-      "230\n",
-      "(230) CCE, SD=100    input_layer_type    VAE;    61.96575052591815\n",
-      "(231) CCE, SD=100    encoding_dim    2;    64.096932907312\n",
-      "(233) CCE, SD=100    encoding_dim    6;    -149.17011929963982\n",
-      "(234) CCE, SD=100    hidden_layers    3;    64.62330013964996\n",
-      "(235) CCE, SD=100    hidden_layers    5;    70.12325655574985\n",
-      "(236) CCE, SD=100    hidden_layers    7;    -16.807425688663173\n",
-      "(238) CCE, SD=100    hidden_layers    27;    -148.74910234254713\n",
-      "(240) CCE, SD=100    activity_regularizer    L2: 0.01;    -22.68142975951335\n"
+      "(244) CCE, SD=100    sigma    0.01/SD;    -2116.8056990700616\n",
+      "(245) CCE, SD=100    sigma    (0.01*4)/SD;    -1013.0156093595683\n",
+      "(246) CCE, SD=100    sigma    0.01/math.sqrt(SD);    -614.645820424419\n"
      ]
     }
    ],
