will now always use CPU because that is faster

--- a/automated_experiments.ipynb
+++ b/automated_experiments.ipynb
@@ -41,6 +41,10 @@
     "\n",
     "# sys.stdout = PseudoTTY(sys.stdout)\n",
     "\n",
+    "import os\n",
+    "\n",
+    "os.environ['CUDA_VISIBLE_DEVICES'] = '-1'\n",
+    "\n",
     "import ipykernel\n",
     "\n",
     "import tensorflow as tf\n",
