about to merge new results

--- a/automated_experiments_gpu.ipynb
+++ b/automated_experiments_gpu.ipynb
@@ -17,17 +17,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Imports done\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "get_ipython().run_line_magic('matplotlib', 'inline')\n",
     "# import sys\n",
@@ -46,7 +38,7 @@
     "# os.environ['CUDA_VISIBLE_DEVICES'] = '-1'\n",
     "\n",
     "import ipykernel\n",
-    "\n",
+    "import csv\n",
     "import tensorflow as tf\n",
     "import tensorflow_addons as tfa\n",
     "import scipy.stats\n",
@@ -97,27 +89,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[name: \"/device:CPU:0\"\ndevice_type: \"CPU\"\nmemory_limit: 268435456\nlocality {\n}\nincarnation: 16686171433734710094\n, name: \"/device:XLA_CPU:0\"\ndevice_type: \"XLA_CPU\"\nmemory_limit: 17179869184\nlocality {\n}\nincarnation: 5033350455495043338\nphysical_device_desc: \"device: XLA_CPU device\"\n, name: \"/device:GPU:0\"\ndevice_type: \"GPU\"\nmemory_limit: 7046801664\nlocality {\n  bus_id: 1\n  links {\n  }\n}\nincarnation: 2897650057252220476\nphysical_device_desc: \"device: 0, name: GeForce GTX 1070, pci bus id: 0000:01:00.0, compute capability: 6.1\"\n, name: \"/device:XLA_GPU:0\"\ndevice_type: \"XLA_GPU\"\nmemory_limit: 17179869184\nlocality {\n}\nincarnation: 9165136407478756654\nphysical_device_desc: \"device: XLA_GPU device\"\n]\n2.3.0\nNum GPUs Available: 1\nWARNING:tensorflow:From <ipython-input-2-c85ea95ca0ce>:5: is_gpu_available (from tensorflow.python.framework.test_util) is deprecated and will be removed in a future version.\nInstructions for updating:\nUse `tf.config.list_physical_devices('GPU')` instead.\n"
-     ]
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 2
-    }
-   ],
+   "outputs": [],
    "source": [
     "from tensorflow.python.client import device_lib\n",
     "print(device_lib.list_local_devices())\n",
@@ -128,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,20 +167,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Experiments: 346\nExperiment configs: 298\n\n\n\n----------DONE---------\n\n\n\nCCE, SD=4    training_method    supervised\nCCE, SD=4    training_method    supervised_2_percent\nCCE, SD=4    training_method    semi\nCCE, SD=4    training_method    semi_sup_first\nCCE, SD=4    training_method    semi_mixed\nCCE, SD=4    training_method    unsupervised\nCCE, SD=4    activation_types    ['sin', 'cos', 'linear', 'relu', 'swish']\nCCE, SD=4    activation_types    ['relu']\nCCE, SD=4    activation_types    ['relu', 'relu', 'relu', 'relu', 'relu']\nCCE, SD=4    activation_types    ['sin', 'cos', 'linear']\nCCE, SD=4    activation_types    ['sin', 'cos', 'linear', 'relu', 'sigmoid']\nCCE, SD=4    input_layer_type    dense\nCCE, SD=4    input_layer_type    gaussian_noise\nCCE, SD=4    input_layer_type    gaussian_dropout\nCCE, SD=4    input_layer_type    sqrt_softmax\nCCE, SD=4    input_layer_type    gaussian_kernel\nCCE, SD=4    input_layer_type    CNN\nCCE, SD=4    input_layer_type    VAE\nCCE, SD=4    encoding_dim    2\nCCE, SD=4    encoding_dim    3\nCCE, SD=4    encoding_dim    6\nCCE, SD=4    hidden_layers    3\nCCE, SD=4    hidden_layers    5\nCCE, SD=4    hidden_layers    7\nCCE, SD=4    hidden_layers    9\nCCE, SD=4    hidden_layers    27\nCCE, SD=4    activity_regularizer    \nCCE, SD=4    activity_regularizer    L2: 0.01\nCCE, SD=4    activity_regularizer    L2: 10^-4\nCCE, SD=4    activity_regularizer    L1: 0.01\nCCE, SD=4    activity_regularizer    L1: 10^-4\nCCE, SD=4    sigma    0.01/SD\nCCE, SD=4    sigma    (0.01*4)/SD\nCCE, SD=4    sigma    0.01/math.sqrt(SD)\nCCE, SD=4    sigma    0.01\nCCE, SD=4    sigma    0.05\nCCE, SD=4    sigma    0.1\nCCE, SD=4    sigma    0.2\nCCE, SD=4    BN_size    2\nCCE, SD=4    BN_size    3\nCCE, SD=4    BN_size    4\nCCE, SD=4    BN_size    5\nCCE, SD=4    BN_size    10\nCCE, SD=4    BN_size    20\nCCE, SD=4    BN_size    30\nCCE, SD=4    labeled_data_percentage    5\nCCE, SD=4    labeled_data_percentage    2\nCCE, SD=4    labeled_data_percentage    1\nCCE, SD=4    labeled_data_percentage    0.5\nCCE, SD=4    labeled_data_percentage    0.25\nCCE, SD=4    labeled_data_percentage    0.125\nCCE, SD=4    sampling_density    4\nCCE, SD=4    sampling_density    15\nCCE, SD=4    sampling_density    25\nCCE, SD=4    sampling_density    50\nCCE, SD=4    sampling_density    100\nCCE, SD=4    sampling_density    150\nCCE, SD=4    sampling_density    300\nCCE, SD=4    gaussian_noise_sigma    0.01/SD\nCCE, SD=4    gaussian_noise_sigma    (0.01*4)/SD\nCCE, SD=4    gaussian_noise_sigma    0.01/math.sqrt(SD)\nCCE, SD=4    gaussian_noise_sigma    0.01\nCCE, SD=4    gaussian_noise_sigma    0.05\nCCE, SD=4    gaussian_noise_sigma    0.1\nCCE, SD=4    gaussian_noise_sigma    0.2\nJSD, SD=4    training_method    supervised\nJSD, SD=4    training_method    supervised_2_percent\nJSD, SD=4    training_method    semi\nJSD, SD=4    training_method    semi_sup_first\nJSD, SD=4    training_method    semi_mixed\nJSD, SD=4    training_method    unsupervised\nJSD, SD=4    activation_types    ['sin', 'cos', 'linear', 'relu', 'swish']\nJSD, SD=4    activation_types    ['relu']\nJSD, SD=4    activation_types    ['relu', 'relu', 'relu', 'relu', 'relu']\nJSD, SD=4    activation_types    ['sin', 'cos', 'linear']\nJSD, SD=4    activation_types    ['sin', 'cos', 'linear', 'relu', 'sigmoid']\nJSD, SD=4    input_layer_type    dense\nJSD, SD=4    input_layer_type    gaussian_noise\nJSD, SD=4    input_layer_type    gaussian_dropout\nJSD, SD=4    input_layer_type    sqrt_softmax\nJSD, SD=4    input_layer_type    gaussian_kernel\nJSD, SD=4    input_layer_type    CNN\nJSD, SD=4    input_layer_type    VAE\nJSD, SD=4    encoding_dim    2\nJSD, SD=4    encoding_dim    3\nJSD, SD=4    encoding_dim    6\nJSD, SD=4    hidden_layers    3\nJSD, SD=4    hidden_layers    5\nJSD, SD=4    hidden_layers    7\nJSD, SD=4    hidden_layers    9\nJSD, SD=4    hidden_layers    27\nJSD, SD=4    activity_regularizer    \nJSD, SD=4    activity_regularizer    L2: 0.01\nJSD, SD=4    activity_regularizer    L2: 10^-4\nJSD, SD=4    activity_regularizer    L1: 0.01\nJSD, SD=4    activity_regularizer    L1: 10^-4\nJSD, SD=4    sigma    0.01/SD\nJSD, SD=4    sigma    (0.01*4)/SD\nJSD, SD=4    sigma    0.01/math.sqrt(SD)\nJSD, SD=4    sigma    0.01\nJSD, SD=4    sigma    0.05\nJSD, SD=4    sigma    0.1\nJSD, SD=4    sigma    0.2\nJSD, SD=4    BN_size    2\nJSD, SD=4    BN_size    3\nJSD, SD=4    BN_size    4\nJSD, SD=4    BN_size    5\nJSD, SD=4    BN_size    10\nJSD, SD=4    BN_size    20\nJSD, SD=4    BN_size    30\nJSD, SD=4    labeled_data_percentage    5\nJSD, SD=4    labeled_data_percentage    2\nJSD, SD=4    labeled_data_percentage    1\nJSD, SD=4    labeled_data_percentage    0.5\nJSD, SD=4    labeled_data_percentage    0.25\nJSD, SD=4    labeled_data_percentage    0.125\nJSD, SD=4    sampling_density    4\nJSD, SD=4    sampling_density    15\nJSD, SD=4    sampling_density    25\nJSD, SD=4    sampling_density    50\nJSD, SD=4    sampling_density    100\nJSD, SD=4    sampling_density    150\nJSD, SD=4    sampling_density    300\nJSD, SD=4    gaussian_noise_sigma    0.01/SD\nJSD, SD=4    gaussian_noise_sigma    (0.01*4)/SD\nJSD, SD=4    gaussian_noise_sigma    0.01/math.sqrt(SD)\nJSD, SD=4    gaussian_noise_sigma    0.01\nJSD, SD=4    gaussian_noise_sigma    0.05\nJSD, SD=4    gaussian_noise_sigma    0.1\nJSD, SD=4    gaussian_noise_sigma    0.2\nCCEu, SD=4    activation_types    ['sin', 'cos', 'linear', 'relu', 'swish']\nCCEu, SD=4    activation_types    ['relu']\nCCEu, SD=4    activation_types    ['relu', 'relu', 'relu', 'relu', 'relu']\nCCEu, SD=4    activation_types    ['sin', 'cos', 'linear']\nCCEu, SD=4    activation_types    ['sin', 'cos', 'linear', 'relu', 'sigmoid']\nCCEu, SD=4    input_layer_type    dense\nCCEu, SD=4    input_layer_type    gaussian_noise\nCCEu, SD=4    input_layer_type    gaussian_dropout\nCCEu, SD=4    input_layer_type    sqrt_softmax\nCCEu, SD=4    input_layer_type    gaussian_kernel\nCCEu, SD=4    input_layer_type    CNN\nCCEu, SD=4    input_layer_type    VAE\nCCEu, SD=4    encoding_dim    2\nCCEu, SD=4    encoding_dim    3\nCCEu, SD=4    encoding_dim    6\nCCEu, SD=4    hidden_layers    3\nCCEu, SD=4    hidden_layers    5\nCCEu, SD=4    hidden_layers    7\nCCEu, SD=4    hidden_layers    9\nCCEu, SD=4    hidden_layers    27\nCCEu, SD=4    activity_regularizer    \nCCEu, SD=4    activity_regularizer    L2: 0.01\nCCEu, SD=4    activity_regularizer    L2: 10^-4\nCCEu, SD=4    activity_regularizer    L1: 0.01\nCCEu, SD=4    activity_regularizer    L1: 10^-4\nCCEu, SD=4    sigma    0.01/SD\nCCEu, SD=4    sigma    (0.01*4)/SD\nCCEu, SD=4    sigma    0.01/math.sqrt(SD)\nCCEu, SD=4    sigma    0.01\nCCEu, SD=4    sigma    0.05\nCCEu, SD=4    sigma    0.1\nCCEu, SD=4    sigma    0.2\nCCEu, SD=4    BN_size    2\nCCEu, SD=4    BN_size    3\nCCEu, SD=4    BN_size    4\nCCEu, SD=4    BN_size    5\nCCEu, SD=4    BN_size    10\nCCEu, SD=4    BN_size    20\nCCEu, SD=4    BN_size    30\nCCEu, SD=4    sampling_density    4\nCCEu, SD=4    sampling_density    15\nCCEu, SD=4    sampling_density    25\nCCEu, SD=4    sampling_density    50\nCCEu, SD=4    sampling_density    100\nCCEu, SD=4    sampling_density    150\nCCEu, SD=4    sampling_density    300\nCCEu, SD=4    gaussian_noise_sigma    0.01/SD\nCCEu, SD=4    gaussian_noise_sigma    (0.01*4)/SD\nCCEu, SD=4    gaussian_noise_sigma    0.01/math.sqrt(SD)\nCCEu, SD=4    gaussian_noise_sigma    0.01\nCCEu, SD=4    gaussian_noise_sigma    0.05\nCCEu, SD=4    gaussian_noise_sigma    0.1\nCCEu, SD=4    gaussian_noise_sigma    0.2\nJSDu, SD=4    activation_types    ['sin', 'cos', 'linear', 'relu', 'swish']\nJSDu, SD=4    activation_types    ['relu']\nJSDu, SD=4    activation_types    ['relu', 'relu', 'relu', 'relu', 'relu']\nJSDu, SD=4    activation_types    ['sin', 'cos', 'linear']\nJSDu, SD=4    activation_types    ['sin', 'cos', 'linear', 'relu', 'sigmoid']\nJSDu, SD=4    input_layer_type    dense\nJSDu, SD=4    input_layer_type    gaussian_noise\nJSDu, SD=4    input_layer_type    gaussian_dropout\nJSDu, SD=4    input_layer_type    sqrt_softmax\nJSDu, SD=4    input_layer_type    gaussian_kernel\nJSDu, SD=4    input_layer_type    CNN\nJSDu, SD=4    input_layer_type    VAE\nJSDu, SD=4    encoding_dim    2\nJSDu, SD=4    encoding_dim    3\nJSDu, SD=4    encoding_dim    6\nJSDu, SD=4    hidden_layers    3\nJSDu, SD=4    hidden_layers    5\nJSDu, SD=4    hidden_layers    7\nJSDu, SD=4    hidden_layers    9\nJSDu, SD=4    hidden_layers    27\nJSDu, SD=4    activity_regularizer    \nJSDu, SD=4    activity_regularizer    L2: 0.01\nJSDu, SD=4    activity_regularizer    L2: 10^-4\nJSDu, SD=4    activity_regularizer    L1: 0.01\nJSDu, SD=4    activity_regularizer    L1: 10^-4\nJSDu, SD=4    sigma    0.01/SD\nJSDu, SD=4    sigma    (0.01*4)/SD\nJSDu, SD=4    sigma    0.01/math.sqrt(SD)\nJSDu, SD=4    sigma    0.01\nJSDu, SD=4    sigma    0.05\nJSDu, SD=4    sigma    0.1\nJSDu, SD=4    sigma    0.2\nJSDu, SD=4    BN_size    2\nJSDu, SD=4    BN_size    3\nJSDu, SD=4    BN_size    4\nJSDu, SD=4    BN_size    5\nJSDu, SD=4    BN_size    10\nJSDu, SD=4    BN_size    20\nJSDu, SD=4    BN_size    30\nJSDu, SD=4    sampling_density    4\nJSDu, SD=4    sampling_density    15\nJSDu, SD=4    sampling_density    25\nJSDu, SD=4    sampling_density    50\nJSDu, SD=4    sampling_density    100\nJSDu, SD=4    sampling_density    150\nJSDu, SD=4    sampling_density    300\nJSDu, SD=4    gaussian_noise_sigma    0.01/SD\nJSDu, SD=4    gaussian_noise_sigma    (0.01*4)/SD\nJSDu, SD=4    gaussian_noise_sigma    0.01/math.sqrt(SD)\nJSDu, SD=4    gaussian_noise_sigma    0.01\nJSDu, SD=4    gaussian_noise_sigma    0.05\nJSDu, SD=4    gaussian_noise_sigma    0.1\nJSDu, SD=4    gaussian_noise_sigma    0.2\nCCE, SD=100    training_method    supervised\nCCE, SD=100    training_method    supervised_2_percent\nCCE, SD=100    training_method    semi\nCCE, SD=100    training_method    semi_sup_first\nCCE, SD=100    training_method    semi_mixed\nCCE, SD=100    training_method    unsupervised\nCCE, SD=100    activation_types    ['sin', 'cos', 'linear', 'relu', 'swish']\nCCE, SD=100    activation_types    ['relu']\nCCE, SD=100    activation_types    ['relu', 'relu', 'relu', 'relu', 'relu']\nCCE, SD=100    activation_types    ['sin', 'cos', 'linear']\nCCE, SD=100    activation_types    ['sin', 'cos', 'linear', 'relu', 'sigmoid']\nCCE, SD=100    input_layer_type    dense\nCCE, SD=100    input_layer_type    gaussian_noise\nCCE, SD=100    input_layer_type    gaussian_dropout\nCCE, SD=100    input_layer_type    sqrt_softmax\nCCE, SD=100    input_layer_type    gaussian_kernel\nCCE, SD=100    input_layer_type    CNN\nCCE, SD=100    input_layer_type    VAE\nCCE, SD=100    encoding_dim    2\nCCE, SD=100    encoding_dim    3\nCCE, SD=100    encoding_dim    6\nCCE, SD=100    hidden_layers    3\nCCE, SD=100    hidden_layers    5\nCCE, SD=100    hidden_layers    7\nCCE, SD=100    hidden_layers    9\nCCE, SD=100    hidden_layers    27\nCCE, SD=100    activity_regularizer    \nCCE, SD=100    activity_regularizer    L2: 0.01\nCCE, SD=100    activity_regularizer    L2: 10^-4\nCCE, SD=100    activity_regularizer    L1: 0.01\nCCE, SD=100    activity_regularizer    L1: 10^-4\nCCE, SD=100    sigma    0.01/SD\nCCE, SD=100    sigma    (0.01*4)/SD\nCCE, SD=100    sigma    0.01/math.sqrt(SD)\nCCE, SD=100    sigma    0.01\nCCE, SD=100    sigma    0.05\nCCE, SD=100    sigma    0.1\nCCE, SD=100    sigma    0.2\nCCE, SD=100    BN_size    2\nCCE, SD=100    BN_size    3\nCCE, SD=100    BN_size    4\nCCE, SD=100    BN_size    5\nCCE, SD=100    labeled_data_percentage    5\nCCE, SD=100    labeled_data_percentage    2\nCCE, SD=100    labeled_data_percentage    1\nCCE, SD=100    labeled_data_percentage    0.5\nCCE, SD=100    labeled_data_percentage    0.25\nCCE, SD=100    labeled_data_percentage    0.125\nCCE, SD=100    gaussian_noise_sigma    0.01/SD\nCCE, SD=100    gaussian_noise_sigma    (0.01*4)/SD\nCCE, SD=100    gaussian_noise_sigma    0.01/math.sqrt(SD)\nCCE, SD=100    gaussian_noise_sigma    0.01\nCCE, SD=100    gaussian_noise_sigma    0.05\nCCE, SD=100    gaussian_noise_sigma    0.1\nCCE, SD=100    gaussian_noise_sigma    0.2\nJSD, SD=100    training_method    supervised\nJSD, SD=100    training_method    supervised_2_percent\nJSD, SD=100    training_method    semi\nJSD, SD=100    training_method    semi_sup_first\nJSD, SD=100    training_method    semi_mixed\nJSD, SD=100    training_method    unsupervised\nJSD, SD=100    activation_types    ['sin', 'cos', 'linear', 'relu', 'swish']\nJSD, SD=100    activation_types    ['relu']\nJSD, SD=100    activation_types    ['relu', 'relu', 'relu', 'relu', 'relu']\nJSD, SD=100    activation_types    ['sin', 'cos', 'linear']\nJSD, SD=100    activation_types    ['sin', 'cos', 'linear', 'relu', 'sigmoid']\nJSD, SD=100    input_layer_type    dense\nJSD, SD=100    input_layer_type    gaussian_noise\nJSD, SD=100    input_layer_type    gaussian_dropout\nJSD, SD=100    input_layer_type    sqrt_softmax\nJSD, SD=100    input_layer_type    gaussian_kernel\nJSD, SD=100    input_layer_type    CNN\nJSD, SD=100    input_layer_type    VAE\nJSD, SD=100    encoding_dim    2\nJSD, SD=100    encoding_dim    3\nJSD, SD=100    encoding_dim    6\nJSD, SD=100    hidden_layers    3\nJSD, SD=100    hidden_layers    5\nJSD, SD=100    hidden_layers    7\nJSD, SD=100    hidden_layers    9\nJSD, SD=100    hidden_layers    27\nJSD, SD=100    activity_regularizer    \nJSD, SD=100    activity_regularizer    L2: 0.01\nJSD, SD=100    activity_regularizer    L2: 10^-4\nJSD, SD=100    activity_regularizer    L1: 0.01\nJSD, SD=100    activity_regularizer    L1: 10^-4\nJSD, SD=100    sigma    0.01/SD\nJSD, SD=100    sigma    (0.01*4)/SD\nJSD, SD=100    sigma    0.01/math.sqrt(SD)\nJSD, SD=100    sigma    0.01\nJSD, SD=100    sigma    0.05\nJSD, SD=100    sigma    0.1\nJSD, SD=100    sigma    0.2\nJSD, SD=100    BN_size    2\nJSD, SD=100    BN_size    3\nJSD, SD=100    BN_size    4\nJSD, SD=100    BN_size    5\nJSD, SD=100    labeled_data_percentage    5\nJSD, SD=100    labeled_data_percentage    2\nJSD, SD=100    labeled_data_percentage    1\nJSD, SD=100    labeled_data_percentage    0.5\nJSD, SD=100    labeled_data_percentage    0.25\nJSD, SD=100    labeled_data_percentage    0.125\nJSD, SD=100    gaussian_noise_sigma    0.01/SD\nJSD, SD=100    gaussian_noise_sigma    (0.01*4)/SD\nJSD, SD=100    gaussian_noise_sigma    0.01/math.sqrt(SD)\nJSD, SD=100    gaussian_noise_sigma    0.01\nJSD, SD=100    gaussian_noise_sigma    0.05\nJSD, SD=100    gaussian_noise_sigma    0.1\nJSD, SD=100    gaussian_noise_sigma    0.2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "experiments = []\n",
     "experiment_config_list = []\n",
+    "experiment_config_strings = []\n",
     "experiment_config_results=[]\n",
     "experiment_config_results2=[]\n",
     "\n",
@@ -268,6 +235,7 @@
     "            mapping = len(experiment_config_list)\n",
     "#             experiments_mapping.append(mapping)\n",
     "            experiment_config_list.append(new_experiment_config)\n",
+    "            experiment_config_strings.append(full_string)\n",
     "            experiment_config_results.append([])\n",
     "            experiment_config_results2.append([])\n",
     "            \n",
@@ -381,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -937,7 +905,15 @@
     "            with open(\"experiment_config_results_gpu\", \"wb\") as dill_file:\n",
     "                dill.dump(experiment_config_results, dill_file) \n",
     "            with open(\"experiment_config_results2_gpu\", \"wb\") as dill_file:\n",
-    "                dill.dump(experiment_config_results2, dill_file)                 \n",
+    "                dill.dump(experiment_config_results2, dill_file)\n",
+    "            experiment_configs_csv = [[experiment_config_strings[i]] + experiment_config_results[i] for i in range(len(experiment_config_results))]\n",
+    "            experiment_configs2_csv = [[experiment_config_strings[i]] + experiment_config_results2[i] for i in range(len(experiment_config_results))]\n",
+    "            with open(\"experiment_config_results_gpu.csv\", \"w\", newline=\"\") as f:\n",
+    "                writer = csv.writer(f)\n",
+    "                writer.writerows(experiment_configs_csv)\n",
+    "            with open(\"experiment_config_results2_gpu.csv\", \"w\", newline=\"\") as f:\n",
+    "                writer = csv.writer(f)\n",
+    "                writer.writerows(experiment_configs2_csv)                            \n",
     "            runs +=1\n",
     "    lowest_results = min([len(x) for x in experiment_config_results])\n",
     "    lowest_results_forcpu = min([len(experiment_config_results[x['mapping']]) for x in experiments if (x['config']['sampling_density']*x['config']['BN_size'])<100])\n",
