now able to read csv from plot_results.ipynb

--- a/plot_results.ipynb
+++ b/plot_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 68,
    "id": "partial-rebate",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 69,
    "id": "present-white",
    "metadata": {},
    "outputs": [
@@ -13227,33 +13227,84 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import csv\n",
+    "# import dill\n",
+    "\n",
+    "# with open(\"experiment_config_results_gpu\",\"rb\") as current_file:\n",
+    "#     experiment_config_results = dill.load(current_file)\n",
+    "# with open(\"experiment_config_results2_gpu\",\"rb\") as current_file:\n",
+    "#     experiment_config_results2 = dill.load(current_file)    \n",
+    "# with open(\"experiments_gpu\",\"rb\") as current_file:\n",
+    "#     experiments = dill.load(current_file)\n",
+    "\n",
+    "# experiment_config_strings = []\n",
+    "# experiment_config_list = []\n",
+    "# for ex in experiments:\n",
+    "#     if ex['config'] not in experiment_config_list:\n",
+    "#         experiment_config_list.append(ex['config'])\n",
+    "#         experiment_config_strings.append(ex['full_string'])\n",
+    "\n",
+    "\n",
+    "# experiment_configs_csv = [[experiment_config_strings[i]] + experiment_config_results[i] for i in range(len(experiment_config_results))]\n",
+    "# experiment_configs2_csv = [[experiment_config_strings[i]] + experiment_config_results2[i] for i in range(len(experiment_config_results))]\n",
+    "\n",
+    "# with open(\"experiment_config_results_gpu.csv\", \"w\", newline=\"\") as f:\n",
+    "#     writer = csv.writer(f)\n",
+    "#     writer.writerows(experiment_configs_csv)\n",
+    "# with open(\"experiment_config_results2_gpu.csv\", \"w\", newline=\"\") as f:\n",
+    "#     writer = csv.writer(f)\n",
+    "#     writer.writerows(experiment_configs2_csv)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import csv\n",
-    "import dill\n",
-    "\n",
-    "with open(\"experiment_config_results_gpu\",\"rb\") as current_file:\n",
-    "    experiment_config_results = dill.load(current_file)\n",
-    "with open(\"experiment_config_results2_gpu\",\"rb\") as current_file:\n",
-    "    experiment_config_results2 = dill.load(current_file)    \n",
-    "with open(\"experiments_gpu\",\"rb\") as current_file:\n",
-    "    experiments = dill.load(current_file)\n",
-    "\n",
-    "experiment_config_strings = []\n",
-    "experiment_config_list = []\n",
-    "for ex in experiments:\n",
-    "    if ex['config'] not in experiment_config_list:\n",
-    "        experiment_config_list.append(ex['config'])\n",
-    "        experiment_config_strings.append(ex['full_string'])\n",
-    "\n",
-    "\n",
-    "experiment_configs_csv = [[experiment_config_strings[i]] + experiment_config_results[i] for i in range(len(experiment_config_results))]\n",
-    "experiment_configs2_csv = [[experiment_config_strings[i]] + experiment_config_results2[i] for i in range(len(experiment_config_results))]\n",
-    "\n",
-    "with open(\"experiment_config_results_gpu.csv\", \"w\", newline=\"\") as f:\n",
-    "    writer = csv.writer(f)\n",
-    "    writer.writerows(experiment_configs_csv)\n",
-    "with open(\"experiment_config_results2_gpu.csv\", \"w\", newline=\"\") as f:\n",
-    "    writer = csv.writer(f)\n",
-    "    writer.writerows(experiment_configs2_csv)  "
+    "with open('experiment_config_results_gpu.csv', 'r') as fp:\n",
+    "    reader = csv.reader(fp)\n",
+    "    li = list(reader)\n",
+    "newlist = []\n",
+    "for row in li:\n",
+    "    newrow = []\n",
+    "    for entry in row [1:]:\n",
+    "        newrow.append(float(entry))\n",
+    "    newlist.append(newrow)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[99.96504512369653,\n",
+       " 99.97392789290225,\n",
+       " 99.95758387352245,\n",
+       " 99.96250585859485,\n",
+       " 99.9665147949056,\n",
+       " 99.95974630521745,\n",
+       " 99.90696444729686]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 67
+    }
+   ],
+   "source": [
+    "newlist[0]"
    ]
   },
   {
