we now read .csv instead of dill file

--- a/automated_experiments_gpu.ipynb
+++ b/automated_experiments_gpu.ipynb
@@ -177,6 +177,18 @@
     "experiment_config_results=[]\n",
     "experiment_config_results2=[]\n",
     "\n",
+    "def load_from_csv(input_string):\n",
+    "    with open(input_string, 'r') as fp:\n",
+    "        reader = csv.reader(fp)\n",
+    "        li = list(reader)\n",
+    "    newlist = []\n",
+    "    for row in li:\n",
+    "        newrow = []\n",
+    "        for entry in row [1:]:\n",
+    "            newrow.append(float(entry))\n",
+    "        newlist.append(newrow)\n",
+    "    return newlist    \n",
+    "\n",
     "def find(inputlist,search,key=lambda z: z):\n",
     "    for i in range(len(inputlist)):\n",
     "        if key(inputlist[i])==search:\n",
@@ -324,10 +336,8 @@
     "\n",
     "if LOAD_DATA:\n",
     "    try:\n",
-    "        with open(\"experiment_config_results_gpu\",\"rb\") as current_file:\n",
-    "            experiment_config_results = dill.load(current_file)\n",
-    "        with open(\"experiment_config_results2_gpu\",\"rb\") as current_file:\n",
-    "            experiment_config_results2 = dill.load(current_file)            \n",
+    "        experiment_config_results = load_from_csv(\"experiment_config_results_gpu.csv\")\n",
+    "        experiment_config_results2 = load_from_csv(\"experiment_config_results2_gpu.csv\")            \n",
     "    except:\n",
     "        print(\"Couldn't load data\")\n",
     "\n",
