ready for training on CPU as well

--- a/automated_experiments.ipynb
+++ b/automated_experiments.ipynb
@@ -33,9 +33,9 @@
     "\n",
     "# sys.stdout = PseudoTTY(sys.stdout)\n",
     "\n",
-    "# import os\n",
+    "import os\n",
     "\n",
-    "# os.environ['CUDA_VISIBLE_DEVICES'] = '-1'\n",
+    "os.environ['CUDA_VISIBLE_DEVICES'] = '-1'\n",
     "\n",
     "import ipykernel\n",
     "import csv\n",
@@ -336,8 +336,8 @@
     "\n",
     "if LOAD_DATA:\n",
     "    try:\n",
-    "        experiment_config_results = load_from_csv(\"experiment_config_results_gpu.csv\")\n",
-    "        experiment_config_results2 = load_from_csv(\"experiment_config_results2_gpu.csv\")            \n",
+    "        experiment_config_results = load_from_csv(\"experiment_config_results.csv\")\n",
+    "        experiment_config_results2 = load_from_csv(\"experiment_config_results2.csv\")            \n",
     "    except:\n",
     "        print(\"Couldn't load data\")\n",
     "\n",
@@ -449,8 +449,8 @@
     "    if use_previous_df:\n",
     "        original_database=pd.read_csv(\"good_db.csv\")\n",
     "    else:\n",
-    "        gum.generateCSV(bn,\"database_gpu.csv\",10000)\n",
-    "        original_database=pd.read_csv(\"database_gpu.csv\")\n",
+    "        gum.generateCSV(bn,\"database.csv\",10000)\n",
+    "        original_database=pd.read_csv(\"database.csv\")\n",
     "    original_database = original_database.reindex(sorted(original_database.columns), axis=1)\n",
     "\n",
     "\n",
@@ -906,8 +906,9 @@
     "        experiment=experiments[i]\n",
     "        x=experiment\n",
     "        previous_runs = len(experiment_config_results[experiment['mapping']])\n",
+    "        if previous_runs==lowest_results:\n",
     "        # if previous_runs==lowest_results_forcpu and (x['config']['sampling_density']*x['config']['BN_size'])<100:\n",
-    "        if previous_runs==lowest_results_forgpu and (x['config']['sampling_density']*x['config']['BN_size'])>=100:\n",
+    "        # if previous_runs==lowest_results_forgpu and (x['config']['sampling_density']*x['config']['BN_size'])>=100:\n",
     "            if runs==0:\n",
     "                print(i)\n",
     "            result,result2 = run_experiment(**experiment['config'])\n",
@@ -917,14 +918,14 @@
     "#             experiment_configs_and_results[freeze(experiment['config'])].append(result)\n",
     "            if runs % 10 == 0 and runs>0:\n",
     "                clear_output(wait=True)\n",
-    "            with open(\"experiments_gpu\", \"wb\") as dill_file:\n",
+    "            with open(\"experiments\", \"wb\") as dill_file:\n",
     "                dill.dump(experiments, dill_file)       \n",
     "            experiment_configs_csv = [[experiment_config_strings[i]] + experiment_config_results[i] for i in range(len(experiment_config_results))]\n",
     "            experiment_configs2_csv = [[experiment_config_strings[i]] + experiment_config_results2[i] for i in range(len(experiment_config_results))]\n",
-    "            with open(\"experiment_config_results_gpu.csv\", \"w\", newline=\"\") as f:\n",
+    "            with open(\"experiment_config_results.csv\", \"w\", newline=\"\") as f:\n",
     "                writer = csv.writer(f)\n",
     "                writer.writerows(experiment_configs_csv)\n",
-    "            with open(\"experiment_config_results2_gpu.csv\", \"w\", newline=\"\") as f:\n",
+    "            with open(\"experiment_config_results2.csv\", \"w\", newline=\"\") as f:\n",
     "                writer = csv.writer(f)\n",
     "                writer.writerows(experiment_configs2_csv)                            \n",
     "            runs +=1\n",
