can now merge results via csv

--- a/plot_results.ipynb
+++ b/plot_results.ipynb
@@ -93,6 +93,19 @@
    "outputs": [],
    "source": [
     "from matplotlib.ticker import (AutoMinorLocator, MultipleLocator)\n",
+    "import csv\n",
+    "\n",
+    "def load_from_csv(input_string):\n",
+    "    with open(input_string, 'r') as fp:\n",
+    "        reader = csv.reader(fp)\n",
+    "        li = list(reader)\n",
+    "    newlist = []\n",
+    "    for row in li:\n",
+    "        newrow = []\n",
+    "        for entry in row [1:]:\n",
+    "            newrow.append(float(entry))\n",
+    "        newlist.append(newrow)\n",
+    "    return newlist    \n",
     "\n",
     "def hex_to_rgb(hex_color: str) -> tuple:\n",
     "    # thanks to https://community.plotly.com/t/scatter-plot-fill-with-color-how-to-set-opacity-of-fill/29591/2\n",
@@ -13163,9 +13176,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# suffix1 = \"_merge1\"\n",
-    "# suffix2 = \"_laptop\"\n",
-    "# result = \"_merge2\""
+    "suffix1 = \"_merge1\"\n",
+    "suffix2 = \"_laptop\"\n",
+    "result = \"_merge2\""
    ]
   },
   {
@@ -13175,20 +13188,62 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# with open(\"experiment_config_results\"+suffix1,\"rb\") as current_file:\n",
-    "#     experiment_config_results1 = dill.load(current_file)\n",
-    "# with open(\"experiment_config_results\"+suffix2,\"rb\") as current_file:\n",
-    "#     experiment_config_results2 = dill.load(current_file)\n",
+    "experiment_config_results1 = dill.load(\"experiment_config_results\"+suffix1+\".csv\")\n",
+    "experiment_config_results2 = dill.load(\"experiment_config_results\"+suffix2+\".csv\")\n",
     "\n",
-    "# experiment_config_results = []\n",
-    "# for i in range(len(experiment_config_results1)):\n",
-    "#     exp1 = experiment_config_results1[i]\n",
-    "#     exp2 = experiment_config_results2[i]\n",
-    "#     experiment_config_results.append(exp1+exp2)\n",
+    "experiment_config_results = []\n",
+    "for i in range(len(experiment_config_results1)):\n",
+    "    exp1 = experiment_config_results1[i]\n",
+    "    exp2 = experiment_config_results2[i]\n",
+    "    experiment_config_results.append(exp1+exp2)\n",
     "\n",
-    "# display(experiment_config_results)\n",
-    "# with open(\"experiment_config_results\"+result, \"wb\") as dill_file:\n",
-    "#     dill.dump(experiment_config_results, dill_file)"
+    "display(experiment_config_results)\n",
+    "\n",
+    "experiment_config_strings = []\n",
+    "experiment_config_list = []\n",
+    "for ex in experiments:\n",
+    "    if ex['config'] not in experiment_config_list:\n",
+    "        experiment_config_list.append(ex['config'])\n",
+    "        experiment_config_strings.append(ex['full_string'])\n",
+    "\n",
+    "\n",
+    "experiment_configs_csv = [[experiment_config_strings[i]] + experiment_config_results[i] for i in range(len(experiment_config_results))]\n",
+    "\n",
+    "with open(\"experiment_config_results\"+result+\".csv\", \"w\", newline=\"\") as f:\n",
+    "    writer = csv.writer(f)\n",
+    "    writer.writerows(experiment_configs_csv)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "experiment_config_results1 = dill.load(\"experiment_config_results2\"+suffix1+\".csv\")\n",
+    "experiment_config_results2 = dill.load(\"experiment_config_results2\"+suffix2+\".csv\")\n",
+    "\n",
+    "experiment_config_results = []\n",
+    "for i in range(len(experiment_config_results1)):\n",
+    "    exp1 = experiment_config_results1[i]\n",
+    "    exp2 = experiment_config_results2[i]\n",
+    "    experiment_config_results.append(exp1+exp2)\n",
+    "\n",
+    "display(experiment_config_results)\n",
+    "\n",
+    "experiment_config_strings = []\n",
+    "experiment_config_list = []\n",
+    "for ex in experiments:\n",
+    "    if ex['config'] not in experiment_config_list:\n",
+    "        experiment_config_list.append(ex['config'])\n",
+    "        experiment_config_strings.append(ex['full_string'])\n",
+    "\n",
+    "\n",
+    "experiment_configs_csv = [[experiment_config_strings[i]] + experiment_config_results[i] for i in range(len(experiment_config_results))]\n",
+    "\n",
+    "with open(\"experiment_config_results2\"+result+\".csv\", \"w\", newline=\"\") as f:\n",
+    "    writer = csv.writer(f)\n",
+    "    writer.writerows(experiment_configs_csv)"
    ]
   },
   {
@@ -13227,6 +13282,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# dill to csv\n",
+    "\n",
     "# import csv\n",
     "# import dill\n",
     "\n",
@@ -13269,16 +13326,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import csv\n",
-    "with open('experiment_config_results_gpu.csv', 'r') as fp:\n",
-    "    reader = csv.reader(fp)\n",
-    "    li = list(reader)\n",
-    "newlist = []\n",
-    "for row in li:\n",
-    "    newrow = []\n",
-    "    for entry in row [1:]:\n",
-    "        newrow.append(float(entry))\n",
-    "    newlist.append(newrow)\n"
+    "# csv to dict\n",
+    "\n",
+    "# import csv\n",
+    "# with open('experiment_config_results_gpu.csv', 'r') as fp:\n",
+    "#     reader = csv.reader(fp)\n",
+    "#     li = list(reader)\n",
+    "# newlist = []\n",
+    "# for row in li:\n",
+    "#     newrow = []\n",
+    "#     for entry in row [1:]:\n",
+    "#         newrow.append(float(entry))\n",
+    "#     newlist.append(newrow)\n"
    ]
   },
   {
@@ -13303,9 +13362,7 @@
      "execution_count": 67
     }
    ],
-   "source": [
-    "newlist[0]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
