--- a/plot_results.ipynb
+++ b/plot_results.ipynb
@@ -436,8 +436,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment_config_results1 = dill.load(\"experiment_config_results2\"+suffix1+\".csv\")\n",
-    "experiment_config_results2 = dill.load(\"experiment_config_results2\"+suffix2+\".csv\")\n",
+    "experiment_config_results1 = load_from_csv(\"experiment_config_results2\"+suffix1+\".csv\")\n",
+    "experiment_config_results2 = load_from_csv(\"experiment_config_results2\"+suffix2+\".csv\")\n",
     "\n",
     "experiment_config_results = []\n",
     "for i in range(len(experiment_config_results1)):\n",
