ready for experiments

--- a/automated_experiments_gpu.ipynb
+++ b/automated_experiments_gpu.ipynb
@@ -782,16 +782,16 @@
     "    for size in sizes_sorted:\n",
     "        dist_before,dist_before2 = prob_distance(verify_data.iloc[:,i:i+size],test_data.iloc[:,i:i+size])\n",
     "        dist_after,dist_after2 = prob_distance(verify_data.iloc[:,i:i+size],results.iloc[:,i:i+size])\n",
-    "        distances_before.append(np.nansum(dist_before)/len(dist_before))\n",
-    "        distances_after.append(np.nansum(dist_after)/len(dist_after))\n",
-    "        distances_before2.append(np.nansum(dist_before2)/len(dist_before2))\n",
-    "        distances_after2.append(np.nansum(dist_after2)/len(dist_after2))        \n",
+    "        distances_before.append(np.nansum(dist_before))\n",
+    "        distances_after.append(np.nansum(dist_after))\n",
+    "        distances_before2.append(np.nansum(dist_before2))\n",
+    "        distances_after2.append(np.nansum(dist_after2))        \n",
     "        i+=size\n",
     "\n",
-    "    avg_distance_before = np.nansum([sizes_sorted[i]*distances_before[i] for i in range(len(sizes_sorted))])/sum(sizes_sorted)\n",
-    "    avg_distance_after = np.nansum([sizes_sorted[i]*distances_after[i] for i in range(len(sizes_sorted))])/sum(sizes_sorted)\n",
-    "    avg_distance_before2 = np.nansum([sizes_sorted[i]*distances_before2[i] for i in range(len(sizes_sorted))])/sum(sizes_sorted)\n",
-    "    avg_distance_after2 = np.nansum([sizes_sorted[i]*distances_after2[i] for i in range(len(sizes_sorted))])/sum(sizes_sorted)    \n",
+    "    avg_distance_before = np.nansum(distances_before)\n",
+    "    avg_distance_after = np.nansum(distances_after)\n",
+    "    avg_distance_before2 = np.nansum(distances_before2)\n",
+    "    avg_distance_after2 = np.nansum(distances_after2)   \n",
     "    improvement = avg_distance_before - avg_distance_after\n",
     "    improvement2 = avg_distance_before2 - avg_distance_after2\n",
     "    noise_left = 100*avg_distance_after/avg_distance_before\n",
